--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dev_dependencies:
 
 dependency_overrides:
   fake_process_manager:
-    path: ../fake_process_manager
+    git: https://github.com/trygvis/fake_process_manager
   tool_mobile:
-    path: ../tool_mobile
+    git: https://github.com/trygvis/tool_mobile
   tool_base:
-    path: ../tool_base
+    git: https://github.com/trygvis/tool_base
 #  tool_base_test:
 #    path: ../tool_base_test
 
