--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,11 @@ dependencies:
 #  intl: any # ">=0.15.0 <1.0.0"
 #  tool_mobile: ^2.0.0
   build: ^2.1.1
-  tool_base: ^2.0.0
-  tool_mobile: ^3.0.0
+  tool_mobile:
+    git: https://github.com/trygvis/tool_mobile
+  tool_base:
+    git: https://github.com/trygvis/tool_base
+
 
 dev_dependencies:
   build_runner: ^2.1.4
