--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
 #  tool_mobile: ^2.0.0
   build: ^2.1.1
   tool_mobile:
-    git: https://github.com/trygvis/tool_mobile
+    git: https://github.com/claudius-kienle/tool_mobile
   tool_base:
     git: https://github.com/trygvis/tool_base
 
@@ -39,7 +39,7 @@ dependency_overrides:
   fake_process_manager:
     git: https://github.com/trygvis/fake_process_manager
   tool_mobile:
-    git: https://github.com/trygvis/tool_mobile
+    git: https://github.com/claudius-kienle/tool_mobile
   tool_base:
     git: https://github.com/trygvis/tool_base
 #  tool_base_test:
