--- a/lib/screens/screens.yaml
+++ b/lib/screens/screens.yaml
@@ -20,7 +20,7 @@ ios:
     resources:
       statusbar: screens/ios/1242/statusbar_black.png
       statusbar black: screens/ios/1242/statusbar_black.png
-      statusbar white: screens/ios/1242/statusbar_black.png
+      statusbar white: screens/ios/1242/statusbar_white.png
       frame: screens/ios/phones/iPhone_7_Plus_Silver.png
     offset: -0-0
     devices:
@@ -55,9 +55,15 @@ ios:
       frame: screens/ios/phones/Apple iPhone XS Max Silver.png
     offset: -0-2
     devices:
+      - iPhone XR
+      - iPhone Xr
       - iPhone XS Max
       - iPhone Xs Max
+      - iPhone 11
       - iPhone 11 Pro Max
+      - iPhone 12 Pro Max
+      - iPhone 13 Pro Max
+      - iPhone 14 Plus
 #  7.9inches:
 #    devices:
 #      - iPad Mini
@@ -102,6 +108,7 @@ ios:
     offset: -3+2
     devices:
       - iPad Pro (12.9-inch) (3rd generation)
+      - iPad Pro (12.9-inch) (4th generation)
 android:
   5.2inch:
     size: 1080x1920
