--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_driver:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   test: ^1.17.0
@@ -55,14 +56,6 @@ dev_dependencies:
 
   screenshots:
     path: ..
-  tool_mobile:
-  tool_base:
-
-dependency_overrides:
-  tool_mobile:
-    path: ../../tool_mobile
-  tool_base:
-    path: ../../tool_base
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
