Updated some spec files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,37 +1,36 @@
 name: screenshots
 description: Auto-generation of screenshots for Apple and Play Stores using emulators, simulators and real devices. Includes support for multiple locales and framing. Compatible with fastlane.
-version: 3.0.0
+version: 3.1.0
 homepage: https://github.com/mmcc007/screenshots
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   args: ^2.3.0
   yaml: ^3.1.0
-#  resource: ^2.1.7
+  #  resource: ^2.1.7
   path: ^1.8.0
   file: ^6.1.2
   archive: ^3.1.2
   platform: ^3.0.0
   process: ^4.2.3
   meta: ^1.7.0
-#  intl: any # ">=0.15.0 <1.0.0"
-#  tool_mobile: ^2.0.0
+  #  intl: any # ">=0.15.0 <1.0.0"
+  #  tool_mobile: ^2.0.0
   build: ^2.1.1
   tool_mobile:
     git: https://github.com/claudius-kienle/tool_mobile
   tool_base:
     git: https://github.com/trygvis/tool_base
 
-
 dev_dependencies:
   build_runner: ^2.1.4
   test: ^1.19.2
-#  test_api: ^0.2.5
+  #  test_api: ^0.2.5
   mockito: ^5.0.16
   pedantic: ^1.8.0+1
-  quiver: '>=2.0.0 <3.0.0'
+  quiver: ">=2.0.0 <3.0.0"
   fake_process_manager: ^0.2.0
   collection: any
   integration_test:
