--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 3.1.1
 homepage: https://github.com/mmcc007/screenshots
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   args: ^2.3.0
@@ -20,9 +20,9 @@ dependencies:
   #  tool_mobile: ^2.0.0
   build: ^2.1.1
   tool_mobile:
-    git: https://github.com/claudius-kienle/tool_mobile
+    git: https://github.com/starshipcoder/tool_mobile
   tool_base:
-    git: https://github.com/trygvis/tool_base
+    git: https://github.com/starshipcoder/tool_base
 
 dev_dependencies:
   build_runner: ^2.1.4
@@ -30,7 +30,7 @@ dev_dependencies:
   #  test_api: ^0.2.5
   mockito: ^5.0.16
   pedantic: ^1.8.0+1
-  quiver: ">=2.0.0 <3.0.0"
+  quiver: ^3.2.1
   fake_process_manager: ^0.2.0
   collection: any
   integration_test:
@@ -40,9 +40,9 @@ dependency_overrides:
   fake_process_manager:
     git: https://github.com/trygvis/fake_process_manager
   tool_mobile:
-    git: https://github.com/claudius-kienle/tool_mobile
+    git: https://github.com/starshipcoder/tool_mobile
   tool_base:
-    git: https://github.com/trygvis/tool_base
+    git: https://github.com/starshipcoder/tool_base
 #  tool_base_test:
 #    path: ../tool_base_test
 
